move header to seprate file and load with JS

--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,8 +1,8 @@
 TODO add documentation
 TODO implement report
+TODO implement comments
 TODO implement add new
 TODO separate pages for lost items and found items
 TODO add footer
-TODO add consistent header/footer code that can be changed in one place
 TODO firebase security
 TODO Imgur api
